src/test/ui/methods/method-path-in-pattern.stderr
error[E0533]: expected unit struct/variant or constant, found method `<Foo>::bar`
  --> $DIR/method-path-in-pattern.rs:15:9
   |
LL |         Foo::bar => {}
   |         ^^^^^^^^

error[E0533]: expected unit struct/variant or constant, found method `<Foo>::bar`
  --> $DIR/method-path-in-pattern.rs:19:9
   |
LL |         <Foo>::bar => {}
   |         ^^^^^^^^^^

error[E0533]: expected unit struct/variant or constant, found method `<Foo>::trait_bar`
  --> $DIR/method-path-in-pattern.rs:23:9
   |
LL |         <Foo>::trait_bar => {}
   |         ^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

